<resources>
    <string name="app_name">Ride it</string>
    <string name="title_activity_maps">Map</string>
    <!-- Navigation floating action buttons -->
    <string name="fab_maps_activity">Öppnar kartan.</string>
    <string name="fab_user_mode_activity">Öppnar skärmen där du kan välja mellan förare och passagerare.</string>
    <string name="fab_chat_activity">Öppnar chatten.</string>
    <!-- Permission dialog -->
    <string name="permission_message">Are you sure you don\'t want to allow Carpool to use your device location?\n\nWithout it you won\'t be able to use the map part of the application.</string>
    <string name="allow">Allow</string>
    <string name="cancel">Avbryt</string>
    <!-- ChooseUserModeActivity -->
    <string name="title_use_as">Använd appen som </string>
    <string name="fab_driver">Använd appen som förare.</string>
    <string name="fab_passenger">Använd appen som passagerare.</string>
    <!-- LocationInfoWindow -->
    <string name="destination">Destination: \u0020</string>
    <string name="vacancies">Lediga platser: \u0020</string>
    <string name="departure">Avgång: \u0020</string>
    <string name="default_time">"00:00"</string>
    <string name="pick_time">Välj avgångstid</string>
    <string name="start_ride">Börja åka</string>
    <string name="title_ride_confirmation">Är du säker på att du vill skapa resan?</string>
    <!-- Ride creation -->
    <string name="title_create_ride">Skapa din samåkningsresa</string>
    <string name="create">Skapa</string>
    <!-- Ride creation confirmation -->
    <string name="from">Från: \u0020</string>
    <string name="to">Till: \u0020</string>
    <string name="confirm">Bekräfta</string>
    <string name="go_back">Gå tillbaka</string>
    <!-- RideCreatedActivity -->
    <string name="title_ride_created">Du har nu lagt upp din färd och kommer att få en notifikation när någon vill samåka med dig!</string>
    <!-- RidesActivity -->
    <string name="title_book_ride_confirm">Är du säker på att du vill boka samåkningen?</string>
    <!-- RidesActivity -->
    <string name="title_activity_rides">Tillgängliga resor</string>
    <string name="carpool">Samåk</string>
    <!-- Ride information -->
    <string name="title_ride_info">Information om resan</string>
    <string name="driver">Förare: \u0020</string>
    <string name="date">Datum: \u0020</string>
    <!-- Login -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="vacancies_selection">
        <item>1 Plats</item>
        <item>2 Platser</item>
        <item>3 Platser</item>
        <item>4 Platser</item>
        <item>5 Platser</item>
        <item>6 Platser</item>
        <item>7 Platser</item>
        <item>8 Platser</item>
    </string-array>


</resources>