<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_create_ride_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_create_ride"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/create_ride_content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_ride_title">

        <TextView
            android:id="@+id/text_create_ride_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_toEndOf="@id/text_create_ride_from">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/autocomplete_fragment_from"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_create_ride_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignBottom="@id/text_create_ride_to"
            android:layout_toEndOf="@id/text_create_ride_from">
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/autocomplete_fragment_to"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_create_ride_vacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancies"
            android:layout_marginTop="60dp"/>

        <Spinner
            android:id="@+id/vacancies_selection"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignBottom="@id/text_create_ride_vacancies"
            android:layout_toEndOf="@id/text_create_ride_vacancies"/>

        <TextView
            android:id="@+id/text_create_ride_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:layout_marginTop="90dp"/>

        <TextView
            android:id="@+id/text_create_ride_departure_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            android:layout_toEndOf="@id/text_create_ride_departure"
            android:layout_alignBaseline="@id/text_create_ride_departure"/>
    </RelativeLayout>

    <Button
        android:id="@+id/button_create_ride"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="106dp"
        android:layout_height="45dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/action_buttons"
        android:name="com.carpool.application.ActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>