<!-- res/layout/example_activity.xml -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/location_info_window"
    android:name="com.carpool.LocationInfoWindowFragment"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="bottom"
    android:clickable="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_top"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/text_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_location_info_window_destination_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_destination"
            app:layout_constraintTop_toTopOf="@id/text_destination" />

        <TextView
            android:id="@+id/text_vacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_destination"/>

        <Spinner
            android:id="@+id/vacancies_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/text_vacancies"
            app:layout_constraintTop_toTopOf="@id/text_vacancies" />

        <TextView
            android:id="@+id/text_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_vacancies" />

        <TextView
            android:id="@+id/departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            app:layout_constraintStart_toEndOf="@id/text_departure"
            app:layout_constraintTop_toTopOf="@id/text_departure" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:focusable="false"
        android:focusableInTouchMode="false" >

        <Button
            android:id="@+id/button_create_ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/button_choose_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/button_create_ride"/>

    </RelativeLayout>
</FrameLayout>
