<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_rideConfirmationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_ride_confirmation"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_rideConfirmationTitle">

        <TextView
            android:id="@+id/text_rideConfirmationFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_rideConfirmationFromInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_rideConfirmationFrom"
            android:layout_alignBaseline="@id/text_rideConfirmationFrom"/>

        <TextView
            android:id="@+id/text_rideConfirmationTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/text_rideConfirmationToInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_rideConfirmationTo"
            android:layout_alignBaseline="@id/text_rideConfirmationTo"/>

        <TextView
            android:id="@+id/text_rideConfirmationVacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancies"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/text_rideConfirmationVacanciesInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_rideConfirmationVacancies"
            android:layout_alignBaseline="@id/text_rideConfirmationVacancies"/>

        <TextView
            android:id="@+id/text_rideConfirmationDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:layout_marginTop="90dp"/>

        <TextView
            android:id="@+id/text_rideConfirmationDepartureInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_rideConfirmationDeparture"
            android:layout_alignBaseline="@id/text_rideConfirmationDeparture"/>


    </RelativeLayout>

    <Button
        android:id="@+id/button_createRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/action_buttons"
        android:name="com.carpool.application.ActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>