<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BookRideConfirmationActivity">

    <TextView
        android:id="@+id/text_book_ride_confirmation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_book_ride_confirm"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_book_ride_confirmation_title">

        <TextView
            android:id="@+id/text_book_ride_confirmation_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_book_ride_confirmation_from_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_book_ride_confirmation_from"
            android:layout_alignBaseline="@id/text_book_ride_confirmation_from"/>

        <TextView
            android:id="@+id/text_ride_confirmation_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/text_ride_confirmation_to_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_ride_confirmation_to"
            android:layout_alignBaseline="@id/text_ride_confirmation_to"/>

        <TextView
            android:id="@+id/text_ride_confirmation_vacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacancies"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/text_ride_confirmation_vacancies_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_ride_confirmation_vacancies"
            android:layout_alignBaseline="@id/text_ride_confirmation_vacancies"/>

        <TextView
            android:id="@+id/text_ride_confirmation_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:layout_marginTop="90dp"/>

        <TextView
            android:id="@+id/text_ride_confirmation_departure_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/text_ride_confirmation_departure"
            android:layout_alignBaseline="@id/text_ride_confirmation_departure"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button_book_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/action_buttons"
        android:name="com.carpool.application.ActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>